Fix search overlap & change style

--- a/Domeeni registreerimise/styles/domeenid-style/domeenid.css
+++ b/Domeeni registreerimise/styles/domeenid-style/domeenid.css
@@ -57,15 +57,25 @@ body {
     font-weight: bold;
 }
 
-.dropdown-menu {
+.navbar-toggler {
     border-radius: 0px;
+    border: 0px;
+    outline: none !important; 
+    box-shadow: none !important; 
+}
+
+.dropdown-menu {
+    border-radius: 5px;
     left: -70px !important; 
     right: 0 !important; 
+    width: 150px;
+    box-shadow: 0px 0px 10px black;
 }
 
 .dropdown-item {
     font-weight: bold;
-    font-size: 13px;
+    font-size: 12px;
+    width: 150px;
 }
 
 .progress {
